Pointed to dashboard in the read more section

--- a/index.html
+++ b/index.html
@@ -370,28 +370,21 @@
 <div id = 'ReachOut' class="tabContent">
 
     <p>
-        Thanks for making it till here! There are some more posts on the same 
-        concept which you may find interesting:
+        I had originally done this as a way to help someone prepare for a match
+        and I have a demo of what an xPo based dashboard could look like - <a 
+        href = 'https://thecomeonman.github.io/xPoDashboard', target = '_blank'>here</a>.
     </p>
 
-    <ul>
-        <li>
-            <a href = "./index.html" target="_blank">
-                Team attacking styles
-            </a>
-        </li>
-        <li>
-            <a href = "./indexPlayers.html" target="_blank">
-                Player attacking styles
-            </a>
-        </li>
-    </ul>
+    <p>
+        There is also code available to generate the raw data needed for the 
+        dashboard <a href = 'https://github.com/thecomeonman/xPo2/blob/master/CalculatingFromStatsbombData.R', target = '_blank'>here</a>
+        which you can repurpose to use on other datasets too.
+    </p>
 
     <p>
         Do you have any feedback, comments, questions, or interesting 
-        observations? You can 
+        observations? Would you like to use xPo at your club? You can 
         <a href = 'https://twitter.com/thecomeonman' target="_blank">find me on Twitter</a>!
-        I'd love to hear your thoughts!
     </p>
 
 
